--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,36 @@
 version: "3"
 services:
-  hapi-fhir-jpaserver-start:
-    build: .
-    container_name: hapi-fhir-jpaserver-start
-    restart: on-failure
-    ports:
-      - "8080:8080"
-  hapi-fhir-mysql:
-    image: mysql:latest
-    container_name: hapi-fhir-mysql
-    #https://dev.mysql.com/doc/refman/8.0/en/identifier-case-sensitivity.html
-    command: --lower_case_table_names=1
-    restart: always
+#  hapi-fhir-jpaserver-start:
+#    build: .
+#    container_name: hapi-fhir-jpaserver-start
+#    restart: on-failure
+#    ports:
+#      - "8080:8080"
+  hapi-fhir-postgres:
+    image: postgres:14.5-alpine
     environment:
-      MYSQL_DATABASE: 'hapi'
-      MYSQL_USER: 'admin'
-      MYSQL_PASSWORD: 'admin'
-      MYSQL_ROOT_PASSWORD: 'admin'
-    volumes:
-      - hapi-fhir-mysql:/var/lib/mysql
-volumes:
-  hapi-fhir-mysql:
+      POSTGRES_PASSWORD: fhir
+      POSTGRES_USER: fhir
+    ports:
+      - 5432:5432
+#  hapi-fhir-mysql:
+#    image: mysql:latest
+#    container_name: hapi-fhir-mysql
+#    #https://dev.mysql.com/doc/refman/8.0/en/identifier-case-sensitivity.html
+#    command: --lower_case_table_names=1
+#    restart: always
+#    ports:
+#      - "3306:3306"
+#    environment:
+#      MYSQL_DATABASE: 'hapi'
+#      MYSQL_USER: 'admin'
+#      MYSQL_PASSWORD: 'admin'
+#      MYSQL_ROOT_PASSWORD: 'admin'
+#    volumes:
+#      - hapi-fhir-mysql:/var/lib/mysql
+  adminer:
+    image: adminer
+    ports:
+      - 8281:8080
+#volumes:
+#  hapi-fhir-mysql:
